bugfix: fix overflow view

--- a/src/styles/fragments/_menu.scss
+++ b/src/styles/fragments/_menu.scss
@@ -99,6 +99,10 @@
   }
   main {
     height: calc(100vh - 50px);
+    overflow-y: auto;
+    .card {
+      width: auto;
+    }
   }
 }
 .sidebar-drawer {
